<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.AddActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/app_bar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/top_app_bar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:minHeight="?attr/actionBarSize"
			app:navigationIcon="@drawable/ic_back"
			app:title="@string/add_story"
			app:titleTextAppearance="?attr/textAppearanceTitleMedium" />
	</com.google.android.material.appbar.AppBarLayout>

	<com.google.android.material.card.MaterialCardView
		android:id="@+id/cv_preview"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginHorizontal="@dimen/margin_horizontal_button"
		android:layout_marginVertical="@dimen/margin_medium"
		app:layout_constraintBottom_toTopOf="@id/btn_camera"
		app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
		app:strokeWidth="1dp">

		<ImageView
			android:id="@+id/iv_preview"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:contentDescription="@string/image_preview"
			android:scaleType="centerCrop"
			tools:ignore="ImageContrastCheck" />
	</com.google.android.material.card.MaterialCardView>

	<Button
		android:id="@+id/btn_camera"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_horizontal_button"
		android:layout_marginEnd="@dimen/margin_small"
		android:layout_marginBottom="@dimen/margin_medium"
		android:text="@string/camera"
		app:layout_constraintBottom_toTopOf="@id/ed_add_description"
		app:layout_constraintEnd_toStartOf="@id/btn_gallery"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/btn_gallery"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_small"
		android:layout_marginEnd="@dimen/margin_horizontal_button"
		android:layout_marginBottom="@dimen/margin_medium"
		android:text="@string/gallery"
		app:layout_constraintBottom_toTopOf="@+id/ed_add_description"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/btn_camera" />

	<com.promecarus.storyapp.custom.edittext.EditTextDescription
		android:id="@id/ed_add_description"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_edit_text_description"
		android:layout_marginHorizontal="@dimen/margin_horizontal_button"
		android:layout_marginBottom="@dimen/margin_medium"
		app:layout_constraintBottom_toTopOf="@id/sm_location"
		tools:ignore="TextContrastCheck"
		tools:layout_editor_absoluteX="46dp" />

	<com.google.android.material.switchmaterial.SwitchMaterial
		android:id="@+id/sm_location"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/margin_horizontal_button"
		android:layout_marginBottom="@dimen/margin_medium"
		android:text="@string/with_current_location"
		app:layout_constraintBottom_toTopOf="@id/button_add"
		app:thumbTint="?attr/colorPrimary" />

	<Button
		android:id="@+id/button_add"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/margin_horizontal_button"
		android:layout_marginBottom="@dimen/margin_large"
		android:text="@string/upload"
		app:layout_constraintBottom_toBottomOf="parent" />

	<ProgressBar
		android:id="@+id/progress_bar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
