<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.MainActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/app_bar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/top_app_bar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:minHeight="?attr/actionBarSize"
			app:menu="@menu/main"
			app:navigationIcon="@drawable/ic_stories"
			app:title="@string/story"
			app:titleTextAppearance="?attr/textAppearanceTitleMedium" />
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:id="@+id/nested_scroll_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:visibility="gone"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
		tools:visibility="visible">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recycler_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingBottom="@dimen/padding_medium"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			tools:listitem="@layout/item_story" />
	</androidx.core.widget.NestedScrollView>

	<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
		android:id="@+id/extended_fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/margin_medium"
		android:contentDescription="@string/add_story"
		android:text="@string/add_story"
		android:visibility="gone"
		app:icon="@drawable/ic_add"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		tools:visibility="visible" />

	<TextView
		android:id="@+id/text_view_empty"
		style="?attr/textAppearanceHeadline5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:paddingStart="64dp"
		android:paddingEnd="64dp"
		android:text="@string/connect_or_relaunch"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible" />

	<ProgressBar
		android:id="@+id/progress_bar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
